package com.mehdilagdimi.myrh.base.enums;

public enum Education {
        BAC,
        BAC_PLUS_2,
        BAC_PLUS_3,
        BAC_PLUS_5,
        BAC_PLUS_8
}
