package com.mehdilagdimi.myrh.base.enums;

public enum OfferType {
    INTERNSHIP,
    CDD,
    CDI
}
