package com.mehdilagdimi.myrh.base.enums;

public enum Profile {
    WEB_DEVELOPMENT,
    SOFTWARE_ENGINEERING,
    HUMAN_RESSOURCES,
    ELECTRICAL_ENGINEERING,
    MECHANICAL_ENGINEERING,
    CRM_CONSULTANCY,
    SALESFORCE_CONSULTANCY,
    ECONOMICS,
    BIOMEDICAL_ENGINEERING,
    MEDICAL_ASSISTANCE
}
