package com.mehdilagdimi.myrh.base.enums;

public enum UserRole {
    AGENT,
    VISITOR,
    EMPLOYER
}
