package com.mehdilagdimi.myrh.model.entity;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class OffreDetails {
    private String description;
}
